--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe allowfullscreen="allowfullscreen" allow="clipboard-write" scrolling="no" class="fp-iframe" src="https://heyzine.com/flip-book/8106a59959.html" style="border: 0px; width: 100%; height: 367px;"></iframe>
+<iframe allowfullscreen="allowfullscreen" allow="clipboard-write" scrolling="no" class="fp-iframe" src="https://heyzine.com/flip-book/23134d1e1e.html" style="border: 1px solid lightgray; width: 100%; height: 400px;"></iframe>
